# slurm-pipeline

./: .gitignore  LICENSE  README.md  config.yml  pyproject.toml  requirements.txt  submit.sh  template-config.yml
cli/: main.py
docs/: param-generator-file.md  template-config.yml
slurm_pipeline/: cluster_utils  config.py  control_plane.py  main.py  slack_notifications.py  slurm.py
slurm_pipeline/cli/: cli.py
slurm_pipeline/slurm-templates/: sbatch-array.sh  sbatch-workfile.sh  sbatch.sh
tests/: __init__.py  test_config.py  test_config.yml  test_control_plane.py  test_slack_notifications.py  test_slurm.py
